--- a/homepage.html
+++ b/homepage.html
@@ -1,10 +1,14 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang='en'>
 <head>
   <meta charset='UTF-8'>
   <title>Codepen Homepage</title>
 </head>
 <body>
-    
+    <div class="nav-bar-wrapper">
+      <div class="nav-bar">
+        <img src="logo/Codepen.io_logo.png">
+      </div>
+    </div>
 </body>
 </html>
