sstyled home page

--- a/homepage.html
+++ b/homepage.html
@@ -3,11 +3,53 @@
 <head>
   <meta charset='UTF-8'>
   <title>Codepen Homepage</title>
+
+  <link rel="stylesheet" href="styles/homepage.css"
+
+  <script src="https://kit.fontawesome.com/2055108f28.js"></script>
+
 </head>
 <body>
-    <div class="nav-bar-wrapper">
-      <div class="nav-bar">
-        <img src="logo/Codepen.io_logo.png">
+  <div class="navigation-wrapper">
+    <div class="nav-link">
+      <div class="nav-link-left">
+          <img src="logo/Codepen.io_logo.png">
+            <h2>Explore</h2>
+        <a href="#">Pens</a>
+        <a href="#">Projects</a>
+        <a href="#">Posts</a>
+        <a href="#">Collections</a>
+        <a href="#" class="dropdown">Spark</a>
+      </div>
+          <div class="nav-link">
+              <div class="nav-link-right">
+            <button>Create</button>
+             <a href="#"><i class="fas fa-search"></i></a>
+            <button>Log In</button>
+            <button>Sign Up</button>
+      </div>     
+     </div>
+     </div>
+
+    <div class="home-page-content-wrapper">
+    <div class="home-page-content">
+      <h1>Codepen is a <b>social development</b> environment for front-end designers and developer.</h1>
+
+
+      <h2>It's the best place to build and deploy a website, show off your work, build test cases, 
+        and find inspiration.</h2>
+
+        <button class="signup-btn">Sign Up for Free</button>
+        <button class="learn-more-btn">Learn More</button>
+    </div>
+  </div>
+    
+    <div class="footer-wrapper">
+      <div class="footer">
+          <h1> code pen for TEAMS </h1>
+          <h1> code pen for EDUCATION</h1>
+          <h1> code pen for PRIVACY</h1>
+          <h1> code pen for WRITING</h1>
       </div>
     </div>
 </body>
