--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
   <meta charset='UTF-8'>
   <title>Codepen Homepage</title>
 
-  <link rel="stylesheet" href="styles/homepage.css"
+  <link rel="stylesheet" href="styles/homepage.css">
 
   <script src="https://kit.fontawesome.com/2055108f28.js"></script>
 
