worked on styles

--- a/homepage.html
+++ b/homepage.html
@@ -14,42 +14,48 @@
     <div class="nav-link">
       <div class="nav-link-left">
           <img src="logo/Codepen.io_logo.png">
-            <h2>Explore</h2>
+            <h1>Explore</h1>
         <a href="#">Pens</a>
         <a href="#">Projects</a>
         <a href="#">Posts</a>
         <a href="#">Collections</a>
-        <a href="#" class="dropdown">Spark</a>
+        <a href="#" class="drop-down">Spark</a>
+        <a href="#"><i class="fas fa-angle-down"></i></i></a>
       </div>
+        <div class="nav-link-right">
           <div class="nav-link">
-              <div class="nav-link-right">
-            <button>Create</button>
-             <a href="#"><i class="fas fa-search"></i></a>
-            <button>Log In</button>
-            <button>Sign Up</button>
-      </div>     
-     </div>
-     </div>
+            <button>Create <a href="#"><i class="fas fa-angle-down"></i></a></button>
+            <i class="fas fa-search"></i>
+              <button>Log In</button>
+              <button>Sign Up</button>
+          </div> 
+        </div> 
+    </div>
+  </div>
 
-    <div class="home-page-content-wrapper">
+  
+  
+  <div class="home-page-content-wrapper">
     <div class="home-page-content">
-      <h1>Codepen is a <b>social development</b> environment for front-end designers and developer.</h1>
+      <h1>Codepen is a <b>social development</b> environment for front-end designers 
+        and developer.</h1>
 
 
       <h2>It's the best place to build and deploy a website, show off your work, build test cases, 
         and find inspiration.</h2>
 
-        <button class="signup-btn">Sign Up for Free</button>
-        <button class="learn-more-btn">Learn More</button>
+        <button class="signup-btn"><b>Sign Up for Free</b></button>
+
+        <button class="learn-more-btn"><b>Learn More</b></button>
     </div>
   </div>
     
     <div class="footer-wrapper">
       <div class="footer">
-          <h1> code pen for TEAMS </h1>
-          <h1> code pen for EDUCATION</h1>
-          <h1> code pen for PRIVACY</h1>
-          <h1> code pen for WRITING</h1>
+          <h1>  codepen for <b>TEAMS</b></h1>
+          <h1>  codepen for <b>EDUCATION</b></h1>
+          <h1>  codepen for PRIVACY </h1>
+          <h1>  codepen for WRITING </h1>
       </div>
     </div>
 </body>
