tried to figure out how get rid of white line

--- a/homepage.html
+++ b/homepage.html
@@ -52,8 +52,8 @@
     
     <div class="footer-wrapper">
       <div class="footer">
-          <h1>  codepen for <b>TEAMS</b></h1>
-          <h1>  codepen for <b>EDUCATION</b></h1>
+          <h1>  codepen for TEAMS </h1>
+          <h1>  codepen for EDUCATION </h1>
           <h1>  codepen for PRIVACY </h1>
           <h1>  codepen for WRITING </h1>
       </div>
