--- a/homepage.html
+++ b/homepage.html
@@ -22,12 +22,12 @@
         <a href="#" class="drop-down">Spark</a>
         <a href="#"><i class="fas fa-angle-down"></i></i></a>
       </div>
+      <div class="nav-link"></div>
         <div class="nav-link-right">
-          <div class="nav-link">
             <button>Create <a href="#"><i class="fas fa-angle-down"></i></a></button>
-            <i class="fas fa-search"></i>
-              <button>Log In</button>
-              <button>Sign Up</button>
+            <a href="#"><i class="fas fa-search"></i></a>
+              <button class="log-In">Log In</button>
+              <button class="sign-up">Sign Up</button>
           </div> 
         </div> 
     </div>
@@ -39,24 +39,22 @@
     <div class="home-page-content">
       <h1>Codepen is a <b>social development</b> environment for front-end designers 
         and developer.</h1>
-
-
-      <h2>It's the best place to build and deploy a website, show off your work, build test cases, 
-        and find inspiration.</h2>
-
-        <button class="signup-btn"><b>Sign Up for Free</b></button>
-
-        <button class="learn-more-btn"><b>Learn More</b></button>
-    </div>
+        <h2>It's the best place to build and deploy a website, show off your work, build test cases, 
+          and find inspiration.</h2>
+          <div class="placeholder"><a href="https://placeholder.com"><img src="https://via.placeholder.com/300"></a></div>
+          <button class="signup-btn"><b>Sign Up for Free</b></button>
+          <button class="learn-more-btn"><b>Learn More</b></button>
+        </div>
   </div>
     
     <div class="footer-wrapper">
       <div class="footer">
-          <h1>  codepen for TEAMS </h1>
-          <h1>  codepen for EDUCATION </h1>
+          <h1>  codepen for TEAMS</h1>
+          <h1>  codepen for EDUCATION</h1>
           <h1>  codepen for PRIVACY </h1>
           <h1>  codepen for WRITING </h1>
       </div>
     </div>
+
 </body>
 </html>
