worked on styles do not touch until tomorrow

--- a/homepage.html
+++ b/homepage.html
@@ -37,11 +37,11 @@
   
   <div class="home-page-content-wrapper">
     <div class="home-page-content">
-      <h1>Codepen is a <b>social development</b> environment for front-end designers 
+      <h1>Codepen is a  <b>social development</b> environment for front-end designers 
         and developer.</h1>
         <h2>It's the best place to build and deploy a website, show off your work, build test cases, 
           and find inspiration.</h2>
-          <div class="placeholder"><a href="https://placeholder.com"><img src="https://via.placeholder.com/300"></a></div>
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/300"></a>
           <button class="signup-btn"><b>Sign Up for Free</b></button>
           <button class="learn-more-btn"><b>Learn More</b></button>
         </div>
