--- a/homepage.html
+++ b/homepage.html
@@ -13,21 +13,21 @@
   <div class="navigation-wrapper">
     <div class="nav-link">
       <div class="nav-link-left">
-          <img src="logo/Codepen.io_logo.png">
-            <h1>Explore</h1>
-        <a href="#">Pens</a>
-        <a href="#">Projects</a>
-        <a href="#">Posts</a>
-        <a href="#">Collections</a>
-        <a href="#" class="drop-down">Spark</a>
-        <a href="#"><i class="fas fa-angle-down"></i></i></a>
+          <div><img src="logo/Codepen.io_logo.png"></div>
+            <div class="explore"><h1>Explore</h1></div>
+        <div class="pen"><a href="#">Pens</a></div>
+        <div class="project"><a href="#">Projects</a></div>
+        <div class="posts"><a href="#">Posts</a></div>
+        <div class="collections"><a href="#">Collections</a></div>
+        <div class="spark"><a href="#" >Spark</a></div>
+        <div><a href="#"><i class="fas fa-angle-down"></i></i></a></div>
       </div>
-      <div class="nav-link"></div>
+      <div class="nav-link">
         <div class="nav-link-right">
-            <button>Create <a href="#"><i class="fas fa-angle-down"></i></a></button>
-            <a href="#"><i class="fas fa-search"></i></a>
-              <button class="log-In">Log In</button>
-              <button class="sign-up">Sign Up</button>
+            <div><button>Create <a href="#"><i class="fas fa-angle-down"></i></a></button></div>
+            <div><a href="#"><i class="fas fa-search"></i></a></div>
+              <div class="log-In"><button >Log In</button></div>
+              <div class="sign-up"><button >Sign Up</button></div>
           </div> 
         </div> 
     </div>
@@ -37,22 +37,23 @@
   
   <div class="home-page-content-wrapper">
     <div class="home-page-content">
-      <h1>Codepen is a  <b>social development</b> environment for front-end designers 
-        and developer.</h1>
-        <h2>It's the best place to build and deploy a website, show off your work, build test cases, 
-          and find inspiration.</h2>
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/300"></a>
-          <button class="signup-btn"><b>Sign Up for Free</b></button>
-          <button class="learn-more-btn"><b>Learn More</b></button>
+      <div class="content-Header"><h1>Codepen is a  <b>social development</b> environment for front-end designers 
+        and developer.</h1></div>
+        <div class="content-Header"><h2>It's the best place to build and deploy a website, show off your work, build test cases, 
+          and find inspiration.</h2></div>
+
+          <div class="placeholder"><a href="https://placeholder.com"><img src="https://via.placeholder.com/300"></a></div>
+          <div class="signup-btn"><button><b>Sign Up for Free</b></button></div>
+          <div class="learn-more-btn"><button><b>Learn More</b></button></div>
         </div>
   </div>
     
     <div class="footer-wrapper">
       <div class="footer">
-          <h1>  codepen for TEAMS</h1>
-          <h1>  codepen for EDUCATION</h1>
-          <h1>  codepen for PRIVACY </h1>
-          <h1>  codepen for WRITING </h1>
+          <div class="footer-content"><h1>  codepen for TEAMS</h1> <div>
+          <div class="footer-content"><h1> codepen for EDUCATION</h1></div>
+          <div class="footer-content"> <h1> codepen for PRIVACY </h1> </div>
+          <div class="footer-content"><h1> codepen for WRITING </h1></div>
       </div>
     </div>
 
