changed some classes in the nav-link-left div

--- a/homepage.html
+++ b/homepage.html
@@ -15,16 +15,16 @@
       <div class="nav-link-left">
           <div><img src="logo/Codepen.io_logo.png"></div>
             <div class="explore"><h1>Explore</h1></div>
-        <div class="pen"><a href="#">Pens</a></div>
-        <div class="project"><a href="#">Projects</a></div>
-        <div class="posts"><a href="#">Posts</a></div>
-        <div class="collections"><a href="#">Collections</a></div>
+        <div class="nav-tab"><a href="#">Pens</a></div>
+        <div class="nav-tab"><a href="#">Projects</a></div>
+        <div class="nav-tab"><a href="#">Posts</a></div>
+        <div class="nav-tab"><a href="#">Collections</a></div>
         <div class="spark"><a href="#" >Spark</a></div>
         <div><a href="#"><i class="fas fa-angle-down"></i></i></a></div>
       </div>
       <div class="nav-link">
         <div class="nav-link-right">
-            <div><button>Create <a href="#"><i class="fas fa-angle-down"></i></a></button></div>
+            <div><button>Creates<a href="#"><i class="fas fa-angle-down"></i></a></button></div>
             <div><a href="#"><i class="fas fa-search"></i></a></div>
               <div class="log-In"><button >Log In</button></div>
               <div class="sign-up"><button >Sign Up</button></div>
