--- a/homepage.html
+++ b/homepage.html
@@ -11,29 +11,41 @@
 </head>
 <body>
   <div class="navigation-wrapper">
-    <div class="nav-link">
-      <div class="nav-link-left">
-          <div><img src="logo/Codepen.io_logo.png"></div>
-            <div class="explore"><h1>Explore</h1></div>
-        <div class="nav-tab"><a href="#">Pens</a></div>
-        <div class="nav-tab"><a href="#">Projects</a></div>
-        <div class="nav-tab"><a href="#">Posts</a></div>
-        <div class="nav-tab"><a href="#">Collections</a></div>
-        <div class="spark"><a href="#" >Spark</a></div>
-        <div><a href="#"><i class="fas fa-angle-down"></i></i></a></div>
-      </div>
-      <div class="nav-link">
-        <div class="nav-link-right">
-            <div><button>Creates<a href="#"><i class="fas fa-angle-down"></i></a></button></div>
-            <div><a href="#"><i class="fas fa-search"></i></a></div>
-              <div class="log-In"><button >Log In</button></div>
-              <div class="sign-up"><button >Sign Up</button></div>
-          </div> 
-        </div> 
-    </div>
-  </div>
 
-  
+    <div class="nav-left-wrapper">
+      <img src="logo/Codepen.io_logo.png">
+    </div>
+
+    <div class="nav-center-wrapper">
+      <div class="explore-wrapper">
+        EXPLORE
+      </div>
+      <div class="tabs-wrapper">
+        <div class="nav-tab"><a href="#"><b>Pens</b></a></div>
+        <div class="nav-tab"><a href="#"><b>Projects</b></a></div>
+        <div class="nav-tab"><a href="#"><b>Posts</b></a></div>
+        <div class="nav-tab"><a href="#"><b>Collections</b></a></div>
+        <div class="spark">
+          <a href="#" >Spark<i class="fas fa-angle-down"></i></a></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="nav-right-wrapper">
+        <div class="btn">
+            <button><b>Create</b><i class="fas fa-angle-down"></i></button>
+        </div>
+        <div class="btn">
+          <i class="fas fa-search"></i>
+        </div>
+        <div class="btn">
+          <button ><b>Log In</b></button>
+        </div>
+        <div class="btn">
+          <button><b>Sign Up</b></button>
+        </div>
+      </div> 
+  </div>
   
   <div class="home-page-content-wrapper">
     <div class="home-page-content">
