--- a/homepage.html
+++ b/homepage.html
@@ -33,16 +33,16 @@
 
     <div class="nav-right-wrapper">
         <div class="btn">
-            <button><b>Create</b><i class="fas fa-angle-down"></i></button>
+            <button>Create<i class="fas fa-angle-down"></i></button>
         </div>
         <div class="btn">
           <i class="fas fa-search"></i>
         </div>
         <div class="btn">
-          <button ><b>Log In</b></button>
+          <button >Log In</button>
         </div>
         <div class="btn">
-          <button><b>Sign Up</b></button>
+          <button>Sign Up</button>
         </div>
       </div> 
   </div>
