--- a/homepage.html
+++ b/homepage.html
@@ -49,7 +49,7 @@
   
   <div class="home-page-content-wrapper">
     <div class="home-page-content">
-      <div class="content-Header"><h1>Codepen is a  <b>social development</b> environment for front-end designers 
+      <div class="content-Header">Codepen is a  <b>social development</b> environment for front-end designers 
         and developer.</h1></div>
         <div class="content-Header"><h2>It's the best place to build and deploy a website, show off your work, build test cases, 
           and find inspiration.</h2></div>
@@ -62,10 +62,10 @@
     
     <div class="footer-wrapper">
       <div class="footer">
-          <div class="footer-content"><h1>  codepen for TEAMS</h1> <div>
-          <div class="footer-content"><h1> codepen for EDUCATION</h1></div>
-          <div class="footer-content"> <h1> codepen for PRIVACY </h1> </div>
-          <div class="footer-content"><h1> codepen for WRITING </h1></div>
+          <div class="footer-content">codepen for <b>TEAMS</b></div>
+          <div class="footer-content">codepen for <b>EDUCATION</b></div>
+          <div class="footer-content">codepen for <b>PRIVACY</b></div>
+          <div class="footer-content">codepen for <b>WRITING</b></div>
       </div>
     </div>
 
