--- a/homepage.html
+++ b/homepage.html
@@ -47,17 +47,23 @@
       </div> 
   </div>
   
-  <div class="home-page-content-wrapper">
-    <div class="home-page-content">
+  <div class="content-wrapper">
+    <div class="content-container">
       <div class="content-Header">Codepen is a  <b>social development</b> environment for front-end designers 
-        and developer.</h1></div>
-        <div class="content-Header"><h2>It's the best place to build and deploy a website, show off your work, build test cases, 
-          and find inspiration.</h2></div>
+          and developer.</h1></div>
+      <div class="content-Header"><h2>It's the best place to build and deploy a website, show off your work, build test cases, 
+            and find inspiration.</h2></div>  
+    </div>
 
-          <div class="placeholder"><a href="https://placeholder.com"><img src="https://via.placeholder.com/300"></a></div>
-          <div class="signup-btn"><button><b>Sign Up for Free</b></button></div>
-          <div class="learn-more-btn"><button><b>Learn More</b></button></div>
-        </div>
+    <div class="image-container">
+      <div>This is a CodePen Project!</div>
+      <div class="placeholder"><a href="https://placeholder.com"><img src="https://via.placeholder.com/300"></a></div>
+    </div>
+    
+    <div class="button-container">
+      <div class="signup-btn"><button><b>Sign Up for Free</b></button></div>
+      <div class="learn-more-btn"><button><b>Learn More</b></button></div>
+    </div>     
   </div>
     
     <div class="footer-wrapper">
